explicitly set z-index on layout to avoid floating over menu

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -62,6 +62,7 @@ a:visited {
   margin: 70px auto;
   padding: 0px 1rem 1.45rem;
   padding-top: 0;
+  z-index: 1;
 }
 
 .logo-link-container {
